crates/nyx-lexer/tests/snapshots/integration_tests__interfaces__empty.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Interface
- Ident: Marker
- Newline
