crates/nyx-lexer/tests/snapshots/integration_tests__interfaces__single_method.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Interface
- Ident: Printable
- Newline
- Indent
- Func
- Ident: print
- LParen
- Star
- SelfLower
- RParen
- Arrow
- OkLiteral
- Newline
- Dedent
