crates/nyx-lexer/tests/snapshots/integration_tests__interfaces__with_extends.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Interface
- Ident: Ordered
- Newline
- Indent
- Extends
- Newline
- Indent
- Ident: Eq
- Newline
- Ident: PartialOrd
- Newline
- Dedent
- Func
- Ident: compare
- LParen
- Star
- SelfLower
- Comma
- Ident: other
- Colon
- Star
- SelfKeyword
- RParen
- Arrow
- I32
- Newline
- Dedent
