crates/nyx-lexer/tests/snapshots/integration_tests__interfaces__with_requires.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Interface
- Ident: Numeric
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Requires
- Newline
- Indent
- Ident: Add
- Newline
- Ident: Sub
- Newline
- Ident: Mul
- Newline
- Ident: Div
- Newline
- Dedent
- Func
- Ident: zero
- LParen
- RParen
- Arrow
- Ident: T
- Newline
- Func
- Ident: one
- LParen
- RParen
- Arrow
- Ident: T
- Newline
- Dedent
