crates/nyx-lexer/tests/snapshots/integration_tests__interfaces__with_where.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Interface
- Ident: Container
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: T
- Colon
- Ident: Sized
- Newline
- Dedent
- Func
- Ident: len
- LParen
- Star
- SelfLower
- RParen
- Arrow
- USize
- Newline
- Func
- Ident: is_empty
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Func
- Ident: get
- LParen
- Star
- SelfLower
- Comma
- Ident: index
- Colon
- USize
- RParen
- Arrow
- Question
- Ident: T
- Newline
- Dedent
